# bin-picking

./: README.md
Monte_Carlo_Simulator/Capture_Point_Cloud/: CMakeLists.txt  capture_pc.cpp
